// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for.js 1`] = `
====================================options=====================================
breakBeforeStatement: "loops"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
for (let i = 0; i < 2; i++) if (true) break

for (let i = 0; i < 2; i++) { console.log("test") }

for (let i = 0; i < 2; i++) console.log("test")

for (const key in { p: 1 })
    if (object.hasOwnProperty(key))
        console.log(object[key]);

for (const element of [1])
    console.log(element)

=====================================output=====================================
for (let i = 0; i < 2; i++)
  if (true) break;

for (let i = 0; i < 2; i++) {
  console.log("test");
}

for (let i = 0; i < 2; i++)
  console.log("test");

for (const key in { p: 1 })
  if (object.hasOwnProperty(key)) console.log(object[key]);

for (const element of [1])
  console.log(element);

================================================================================
`;

exports[`for.js 2`] = `
====================================options=====================================
breakBeforeStatement: "always"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
for (let i = 0; i < 2; i++) if (true) break

for (let i = 0; i < 2; i++) { console.log("test") }

for (let i = 0; i < 2; i++) console.log("test")

for (const key in { p: 1 })
    if (object.hasOwnProperty(key))
        console.log(object[key]);

for (const element of [1])
    console.log(element)

=====================================output=====================================
for (let i = 0; i < 2; i++)
  if (true)
    break;

for (let i = 0; i < 2; i++) {
  console.log("test");
}

for (let i = 0; i < 2; i++)
  console.log("test");

for (const key in { p: 1 })
  if (object.hasOwnProperty(key))
    console.log(object[key]);

for (const element of [1])
  console.log(element);

================================================================================
`;
